Full Information page added

--- a/generalInfo.html
+++ b/generalInfo.html
@@ -115,7 +115,13 @@
                                         <div class="relative w-full">
                                             <input type="text" placeholder="Expiry date" class="input-field pr-12" />
                                             <div class="calendar-icon">
-                                                <!-- Calendar Icon SVG here -->
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34"
+                                                    viewBox="0 0 34 34" fill="none">
+                                                    <path
+                                                        d="M16.1494 26.0698H18.7693M24.0393 26.0698H26.6694M8.2693 26.0698H10.8894M16.1494 18.1899H18.7693M24.0393 18.1899H26.6694M8.2693 18.1899H10.8894M1.69923 11.5996H33.2293M25.3494 7.59961V1.04004M9.57936 7.59961V1.04004M6.96925 32.5996H27.9692C28.66 32.5996 29.344 32.4636 29.9822 32.1992C30.6204 31.9349 31.2003 31.5475 31.6887 31.0591C32.1772 30.5706 32.5645 29.9907 32.8289 29.3525C33.0932 28.7144 33.2293 28.0306 33.2293 27.3398V8.97998C33.2293 7.58402 32.6754 6.24487 31.6892 5.25684C30.7031 4.26881 29.3652 3.71261 27.9692 3.70996H6.96925C6.27718 3.70996 5.59203 3.846 4.95265 4.11084C4.31326 4.37568 3.73229 4.76405 3.24293 5.25342C2.75356 5.74278 2.36544 6.3235 2.1006 6.96289C1.83575 7.60228 1.69923 8.28791 1.69923 8.97998V27.3398C1.69791 28.0323 1.83353 28.7179 2.09791 29.3579C2.36229 29.9979 2.75037 30.5797 3.24 31.0693C3.72963 31.559 4.31096 31.9471 4.95094 32.2114C5.59092 32.4758 6.27681 32.6112 6.96925 32.6099V32.5996Z"
+                                                        stroke="#999999" stroke-width="1.5" stroke-linecap="round"
+                                                        stroke-linejoin="round" />
+                                                </svg>
                                             </div>
                                         </div>
                                     </div>
@@ -125,7 +131,13 @@
                                         <div class="relative w-full">
                                             <input type="text" placeholder="Date of birth" class="input-field" />
                                             <div class="calendar-icon">
-                                                <!-- Calendar Icon SVG here -->
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34"
+                                                    viewBox="0 0 34 34" fill="none">
+                                                    <path
+                                                        d="M16.1494 26.0698H18.7693M24.0393 26.0698H26.6694M8.2693 26.0698H10.8894M16.1494 18.1899H18.7693M24.0393 18.1899H26.6694M8.2693 18.1899H10.8894M1.69923 11.5996H33.2293M25.3494 7.59961V1.04004M9.57936 7.59961V1.04004M6.96925 32.5996H27.9692C28.66 32.5996 29.344 32.4636 29.9822 32.1992C30.6204 31.9349 31.2003 31.5475 31.6887 31.0591C32.1772 30.5706 32.5645 29.9907 32.8289 29.3525C33.0932 28.7144 33.2293 28.0306 33.2293 27.3398V8.97998C33.2293 7.58402 32.6754 6.24487 31.6892 5.25684C30.7031 4.26881 29.3652 3.71261 27.9692 3.70996H6.96925C6.27718 3.70996 5.59203 3.846 4.95265 4.11084C4.31326 4.37568 3.73229 4.76405 3.24293 5.25342C2.75356 5.74278 2.36544 6.3235 2.1006 6.96289C1.83575 7.60228 1.69923 8.28791 1.69923 8.97998V27.3398C1.69791 28.0323 1.83353 28.7179 2.09791 29.3579C2.36229 29.9979 2.75037 30.5797 3.24 31.0693C3.72963 31.559 4.31096 31.9471 4.95094 32.2114C5.59092 32.4758 6.27681 32.6112 6.96925 32.6099V32.5996Z"
+                                                        stroke="#999999" stroke-width="1.5" stroke-linecap="round"
+                                                        stroke-linejoin="round" />
+                                                </svg>
                                             </div>
                                         </div>
 
@@ -207,7 +219,7 @@
                                         <div class="col-span-2">
                                             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                                                 <input type="text" placeholder="Insurance company name"
-                                                    class="input-field" />
+                                                    class="input-field col-span-2" />
                                                 <input type="text" placeholder="Insurance Policy Number"
                                                     class="input-field" />
                                                 <input type="text" placeholder="Date of Expiry" class="input-field" />
